# Chess3D

./: CMakeLists.txt  README.md
.github/workflows/: config.yml
data/games/: startPosition.txt
include/: bishop.h  board.h  graphics.h  interpereter.h  king.h  knight.h  pawn.h  piece.h  playerInput.h  queen.h  rook.h
src/: bishop.cpp  board.cpp  graphics.cpp  interpereter.cpp  king.cpp  knight.cpp  main.cpp  pawn.cpp  piece.cpp  queen.cpp  rook.cpp
